--- a/MyWebpage/index.html
+++ b/MyWebpage/index.html
@@ -147,7 +147,9 @@
 
                                         <div class="body">
                                             <!-- TODO: fix this description -->
-                                            <p>Advanced machine learning techniques and algorithms and how to package and deploy your models to a production environment. Gain practical experience using Amazon SageMaker to deploy trained models to a web application and evaluate the performance of your models. A/B test models and learn how to update the models as you gather more data, an important skill in industry.</p>
+                                            <!-- <p>Build convolutional networks for image recognition, recurrent networks for sequence generation, learn cutting-edge deep reinforcement learning algorithms—from Deep Q-Networks (DQN) to Deep Deterministic Policy Gradients (DDPG).
+
+                                            Advanced machine learning techniques and algorithms and how to package and deploy your models to a production environment. Gain practical experience using Amazon SageMaker to deploy trained models to a web application and evaluate the performance of your models. A/B test models and learn how to update the models as you gather more data, an important skill in industry.</p> -->
                                             <h4 class="item-title">Projects completed:</h4>
                                             <ul>
                                                 <li>Teach a Quadcopter to Fly</li>
@@ -159,8 +161,7 @@
                                             </ul>
                                             <h4 class="item-title">Technologies used:</h4>
                                             <ul class="list-inline">
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jupyter</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Notebooks</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">JupyterNotebooks</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">Keras</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">Tensorflow</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">Scikit-learn</span></li>
@@ -185,7 +186,7 @@
     
                                         <div class="body">
                                             <!-- TODO: fix this description -->
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, aperiam quas voluptatibus delectus necessitatibus cum dolores a, maiores beatae ipsam provident odio voluptas nesciunt sequi! Ratione quisquam iusto mollitia explicabo?</p>
+                                            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, aperiam quas voluptatibus delectus necessitatibus cum dolores a, maiores beatae ipsam provident odio voluptas nesciunt sequi! Ratione quisquam iusto mollitia explicabo?</p> -->
                                             <h4 class="item-title">Achivements:</h4>
                                             <ul>
                                                 <li>Five Academic Acknowledgements (from 2nd to 6th year)</li>
@@ -350,7 +351,7 @@
                             </section> <!-- /End of skills section -->
 
                             <section class="activities">
-                                <h2 class="title">Extra activities</h2>
+                                <h2 class="title">Courses</h2>
                                 <div class="body">
                                     <div class="item">
                                         <h3 class="item-title">Introduction to Machine Learning</h3>
