Set old avatar back

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<!-- Avatar image (220x220 pixels) -->
 						<img
 							class="img-fluid"
-							src="assets/images/avatar.jpg"
+							src="assets/images/_avatar.jpg"
 							alt="A front picture of Samuel Rodríguez"
 						/>
 						<div class="personal information">
