Add title to external links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<nav id="main-navbar" class="navbar navbar-expand-md fixed-top navbar-dark bg-transparent">
 				<div class="container">
 					<div class="navbar-brand">
-						<a href="https://twitter.com/SamyRodrguez" target="_blank" rel="noopener noreferrer">
+						<a title="Check my Twitter account" href="https://twitter.com/SamyRodrguez" target="_blank" rel="noopener noreferrer">
 							<!-- Twitter icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 								<path
@@ -43,7 +43,7 @@
 								/>
 							</svg>
 						</a>
-						<a href="https://www.facebook.com/profile.php?id=668912495" target="_blank" rel="noopener noreferrer">
+						<a title="Check my Facebook account" href="https://www.facebook.com/profile.php?id=668912495" target="_blank" rel="noopener noreferrer">
 							<!-- Facebook icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 								<path 
@@ -51,7 +51,7 @@
 								/>
 							</svg>
 						</a>
-						<a href="https://www.linkedin.com/in/samrodriguezlopez/" target="_blank" rel="noopener noreferrer">
+						<a title="Check my LinkedIn account" href="https://www.linkedin.com/in/samrodriguezlopez/" target="_blank" rel="noopener noreferrer">
 							<!-- LinkedIn icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 								<path 
@@ -59,7 +59,7 @@
 								/>
 							</svg>
 						</a>
-						<a href="https://github.com/Sam1320" target="_blank" rel="noopener noreferrer">
+						<a title="Check my GitHub account" href="https://github.com/Sam1320" target="_blank" rel="noopener noreferrer">
 							<!-- GitHub icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
 								<path
@@ -67,7 +67,7 @@
 								/>
 							</svg>
 						</a>
-						<a href="mailto:sarl132040@gmail.com" target="_blank" rel="noopener noreferrer">
+						<a title="Send me an email" href="mailto:sarl132040@gmail.com" target="_blank" rel="noopener noreferrer">
 							<!-- Envelope icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 								<path 
@@ -555,7 +555,7 @@
 		<!-- Footer section -->
 		<footer>
 			<div class="social">
-				<a href="https://twitter.com/SamyRodrguez" target="_blank" rel="noopener noreferrer">
+				<a title="Check my Twitter account" href="https://twitter.com/SamyRodrguez" target="_blank" rel="noopener noreferrer">
 					<!-- Twitter icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 						<path
@@ -563,7 +563,7 @@
 						/>
 					</svg>
 				</a>
-				<a href="https://www.facebook.com/profile.php?id=668912495" target="_blank" rel="noopener noreferrer">
+				<a title="Check my Facebook account" href="https://www.facebook.com/profile.php?id=668912495" target="_blank" rel="noopener noreferrer">
 					<!-- Facebook icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 						<path 
@@ -571,7 +571,7 @@
 						/>
 					</svg>
 				</a>
-				<a href="https://www.linkedin.com/in/samrodriguezlopez/" target="_blank" rel="noopener noreferrer">
+				<a title="Check my LinkedIn account" href="https://www.linkedin.com/in/samrodriguezlopez/" target="_blank" rel="noopener noreferrer">
 					<!-- LinkedIn icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 						<path 
@@ -579,7 +579,7 @@
 						/>
 					</svg>
 				</a>
-				<a href="https://github.com/Sam1320" target="_blank" rel="noopener noreferrer">
+				<a title="Check my GitHub account" href="https://github.com/Sam1320" target="_blank" rel="noopener noreferrer">
 					<!-- GitHub icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
 						<path
@@ -587,7 +587,7 @@
 						/>
 					</svg>
 				</a>
-				<a href="mailto:sarl132040@gmail.com" target="_blank" rel="noopener noreferrer">
+				<a title="Send me an email" href="mailto:sarl132040@gmail.com" target="_blank" rel="noopener noreferrer">
 					<!-- Envelope icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 						<path 
