Add meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<!-- To ensure proper rendering and touch zooming for all devices -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta
+			name="description"
+			content="I'm a Venezuelan medical doctor based in Berlin. My goal is improving medical diagnosis and treatment process as well as enhancing
+		the way clinical records are analyzed, processed and stored."
+		/>
 		<meta name="theme-color" content="#5b5d5f" />
 		<!-- Favicon -->
 			<!-- TODO: Insert here your favicons if any -->
@@ -35,7 +40,12 @@
 			<nav id="main-navbar" class="navbar navbar-expand-md fixed-top navbar-dark bg-transparent">
 				<div class="container">
 					<div class="navbar-brand">
-						<a title="Check my Twitter account" href="https://twitter.com/SamyRodrguez" target="_blank" rel="noopener noreferrer">
+						<a
+							title="Check my Twitter account"
+							href="https://twitter.com/SamyRodrguez"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
 							<!-- Twitter icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 								<path
@@ -43,23 +53,38 @@
 								/>
 							</svg>
 						</a>
-						<a title="Check my Facebook account" href="https://www.facebook.com/profile.php?id=668912495" target="_blank" rel="noopener noreferrer">
+						<a
+							title="Check my Facebook account"
+							href="https://www.facebook.com/profile.php?id=668912495"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
 							<!-- Facebook icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-								<path 
+								<path
 									d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"
 								/>
 							</svg>
 						</a>
-						<a title="Check my LinkedIn account" href="https://www.linkedin.com/in/samrodriguezlopez/" target="_blank" rel="noopener noreferrer">
+						<a
+							title="Check my LinkedIn account"
+							href="https://www.linkedin.com/in/samrodriguezlopez/"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
 							<!-- LinkedIn icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-								<path 
+								<path
 									d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
 								/>
 							</svg>
 						</a>
-						<a title="Check my GitHub account" href="https://github.com/Sam1320" target="_blank" rel="noopener noreferrer">
+						<a
+							title="Check my GitHub account"
+							href="https://github.com/Sam1320"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
 							<!-- GitHub icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
 								<path
@@ -67,11 +92,16 @@
 								/>
 							</svg>
 						</a>
-						<a title="Send me an email" href="mailto:sarl132040@gmail.com" target="_blank" rel="noopener noreferrer">
+						<a
+							title="Send me an email"
+							href="mailto:sarl132040@gmail.com"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
 							<!-- Envelope icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-								<path 
-								d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
+								<path
+									d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
 								/>
 							</svg>
 						</a>
@@ -121,7 +151,7 @@
 				<div class="arrow-to-scroll-down d-block">
 					<a href="#about">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10 -10 448 512">
-							<path 
+							<path
 								d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
 							/>
 						</svg>
@@ -140,10 +170,7 @@
 					<!-- Header of the resume block -->
 					<div class="resume header">
 						<!-- Avatar image (220x220 pixels) -->
-						<img
-							src="assets/images/_avatar.jpg"
-							alt="A front picture of Samuel Rodríguez"
-						/>
+						<img src="assets/images/_avatar.jpg" alt="A front picture of Samuel Rodríguez" />
 						<div class="personal information">
 							<div class="primary-info">
 								<h3>Samuel Rodríguez</h3>
@@ -153,7 +180,7 @@
 									<li class="mb-2">
 										<a href="#">
 											<svg class="mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-												<path 
+												<path
 													d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
 												/>
 											</svg>
@@ -163,7 +190,7 @@
 									<li>
 										<a href="#">
 											<svg class="mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-												<path 
+												<path
 													d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"
 												/>
 											</svg>
@@ -555,7 +582,12 @@
 		<!-- Footer section -->
 		<footer>
 			<div class="social">
-				<a title="Check my Twitter account" href="https://twitter.com/SamyRodrguez" target="_blank" rel="noopener noreferrer">
+				<a
+					title="Check my Twitter account"
+					href="https://twitter.com/SamyRodrguez"
+					target="_blank"
+					rel="noopener noreferrer"
+				>
 					<!-- Twitter icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 						<path
@@ -563,23 +595,38 @@
 						/>
 					</svg>
 				</a>
-				<a title="Check my Facebook account" href="https://www.facebook.com/profile.php?id=668912495" target="_blank" rel="noopener noreferrer">
+				<a
+					title="Check my Facebook account"
+					href="https://www.facebook.com/profile.php?id=668912495"
+					target="_blank"
+					rel="noopener noreferrer"
+				>
 					<!-- Facebook icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-						<path 
+						<path
 							d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"
 						/>
 					</svg>
 				</a>
-				<a title="Check my LinkedIn account" href="https://www.linkedin.com/in/samrodriguezlopez/" target="_blank" rel="noopener noreferrer">
+				<a
+					title="Check my LinkedIn account"
+					href="https://www.linkedin.com/in/samrodriguezlopez/"
+					target="_blank"
+					rel="noopener noreferrer"
+				>
 					<!-- LinkedIn icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-						<path 
+						<path
 							d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
 						/>
 					</svg>
 				</a>
-				<a title="Check my GitHub account" href="https://github.com/Sam1320" target="_blank" rel="noopener noreferrer">
+				<a
+					title="Check my GitHub account"
+					href="https://github.com/Sam1320"
+					target="_blank"
+					rel="noopener noreferrer"
+				>
 					<!-- GitHub icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
 						<path
@@ -587,11 +634,16 @@
 						/>
 					</svg>
 				</a>
-				<a title="Send me an email" href="mailto:sarl132040@gmail.com" target="_blank" rel="noopener noreferrer">
+				<a
+					title="Send me an email"
+					href="mailto:sarl132040@gmail.com"
+					target="_blank"
+					rel="noopener noreferrer"
+				>
 					<!-- Envelope icon -->
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-						<path 
-						d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
+						<path
+							d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
 						/>
 					</svg>
 				</a>
