Change title tags for aria-label

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<div class="container">
 					<div class="navbar-brand">
 						<a
-							title="Check my Twitter account"
+							aria-label="Check my Twitter account"
 							href="https://twitter.com/SamyRodrguez"
 							target="_blank"
 							rel="noopener noreferrer"
@@ -54,7 +54,7 @@
 							</svg>
 						</a>
 						<a
-							title="Check my Facebook account"
+							aria-label="Check my Facebook account"
 							href="https://www.facebook.com/profile.php?id=668912495"
 							target="_blank"
 							rel="noopener noreferrer"
@@ -67,7 +67,7 @@
 							</svg>
 						</a>
 						<a
-							title="Check my LinkedIn account"
+							aria-label="Check my LinkedIn account"
 							href="https://www.linkedin.com/in/samrodriguezlopez/"
 							target="_blank"
 							rel="noopener noreferrer"
@@ -80,7 +80,7 @@
 							</svg>
 						</a>
 						<a
-							title="Check my GitHub account"
+							aria-label="Check my GitHub account"
 							href="https://github.com/Sam1320"
 							target="_blank"
 							rel="noopener noreferrer"
@@ -93,7 +93,7 @@
 							</svg>
 						</a>
 						<a
-							title="Send me an email"
+							aria-label="Send me an email"
 							href="mailto:sarl132040@gmail.com"
 							target="_blank"
 							rel="noopener noreferrer"
@@ -583,7 +583,7 @@
 		<footer>
 			<div class="social">
 				<a
-					title="Check my Twitter account"
+					aria-label="Check my Twitter account"
 					href="https://twitter.com/SamyRodrguez"
 					target="_blank"
 					rel="noopener noreferrer"
@@ -596,7 +596,7 @@
 					</svg>
 				</a>
 				<a
-					title="Check my Facebook account"
+					aria-label="Check my Facebook account"
 					href="https://www.facebook.com/profile.php?id=668912495"
 					target="_blank"
 					rel="noopener noreferrer"
@@ -609,7 +609,7 @@
 					</svg>
 				</a>
 				<a
-					title="Check my LinkedIn account"
+					aria-label="Check my LinkedIn account"
 					href="https://www.linkedin.com/in/samrodriguezlopez/"
 					target="_blank"
 					rel="noopener noreferrer"
@@ -622,7 +622,7 @@
 					</svg>
 				</a>
 				<a
-					title="Check my GitHub account"
+					aria-label="Check my GitHub account"
 					href="https://github.com/Sam1320"
 					target="_blank"
 					rel="noopener noreferrer"
@@ -635,7 +635,7 @@
 					</svg>
 				</a>
 				<a
-					title="Send me an email"
+					aria-label="Send me an email"
 					href="mailto:sarl132040@gmail.com"
 					target="_blank"
 					rel="noopener noreferrer"
