Remove unnecessary images

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					<!-- Header of the resume block -->
 					<div class="resume header">
 						<!-- Avatar image (220x220 pixels) -->
-						<img src="assets/images/_avatar.jpg" alt="A front picture of Samuel Rodríguez" />
+						<img src="assets/images/avatar.jpg" alt="A front picture of Samuel Rodríguez" />
 						<div class="personal information">
 							<div class="primary-info">
 								<h3>Samuel Rodríguez</h3>
