make redirect message nicer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <p>Hi, my site has moved here <a href="https://www.samrodriguez.io/">https://www.samrodriguez.io/</a> :)</p>
+        <p>Hi there,</p>
+        <p>My site has moved to <a href="https://www.samrodriguez.io/">samrodriguez.io</a> 😊</p>
     </div>
 </body>
 </html>
